# HealthPing

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: daily-report.yml  health-check.yml  main.yml
config/: email.json  loader.py  services.json  settings.json  validator.py
models/: __init__.py  email_config.py  health_result.py  report.py  service.py  settings.py
monitor/: __init__.py  checker.py
notifications/: __init__.py  email_sender.py
reports/: __init__.py  generator.py
templates/: daily_report.html  email_alert.html  email_status.html  email_success.html  report_template.html  weekly_report.html
utils/: config_loader.py  logger.py
