[project]
name = "healthping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
